# ldb

./: .gitignore  .pre-commit-config.yaml  README.md  bench  bench-data.dvc  data.dvc  pyproject.toml  setup.cfg
.benchmarks/Linux-CPython-3.10-64bit/: 0001_Linux-python3.10.6-2022-08-29-T-19-01-42-239955907.json  0001_a8b6082-fs-Linux-python3.10.6-2022-08-31-T-16-18-20-708860518.json  0001_fs-1024f91-Linux-python3.10.6-2022-09-01-T-15-23-26-920072248.json  0001_fs-1a8dc2a-Linux-python3.10.6-2022-09-01-T-17-35-26-011796937.json  0001_fs-b19c2a3-Linux-python3.10.6-2022-09-01-T-01-42-47-072106232.json  0001_fs-c31fc5d-Linux-python3.10.6-2022-08-31-T-17-46-09-000360268.json  0001_fs-c3c766b-Linux-python3.10.6-2022-09-01-T-01-21-48-908980190.json  0001_fs-ef25b0b-Linux-python3.10.6-2022-09-01-T-14-45-48-938152648.json  0002_a8b6082-duckdb-Linux-python3.10.6-2022-08-31-T-16-18-54-217175392.json  0002_duckdb-1024f91-Linux-python3.10.6-2022-09-01-T-15-26-16-800291694.json  0002_duckdb-1a8dc2a-Linux-python3.10.6-2022-09-01-T-17-37-23-608705349.json  0002_duckdb-b19c2a3-Linux-python3.10.6-2022-09-01-T-01-49-10-657641202.json  0002_duckdb-c31fc5d-Linux-python3.10.6-2022-08-31-T-17-46-40-408069972.json  0002_duckdb-c3c766b-Linux-python3.10.6-2022-09-01-T-01-22-32-545276616.json  0002_duckdb-ef25b0b-Linux-python3.10.6-2022-09-01-T-14-47-06-269220033.json  0003_a8b6082-sqlite-Linux-python3.10.6-2022-08-31-T-16-19-53-168195438.json  0003_sqlite-1024f91-Linux-python3.10.6-2022-09-01-T-15-30-02-028971988.json  0003_sqlite-1a8dc2a-Linux-python3.10.6-2022-09-01-T-17-40-03-050987032.json  0003_sqlite-b19c2a3-Linux-python3.10.6-2022-09-01-T-01-59-17-899458992.json  0003_sqlite-c31fc5d-Linux-python3.10.6-2022-08-31-T-17-47-31-283004302.json  0003_sqlite-c3c766b-Linux-python3.10.6-2022-09-01-T-01-23-35-180442859.json  0003_sqlite-ef25b0b-Linux-python3.10.6-2022-09-01-T-14-48-55-652788049.json
.dvc/: config
.github/: renovate.json
.github/workflows/: bench.yml  test.yml
documentation/: Command-summary.md  Getting-started-with-LDB.md
ldb/: __init__.py  __main__.py  add.py  app_info.py  cli.py  cli_utils.py  collections.py  commit.py  config.py  core.py  data_formats.py  data_object_tag.py  dataset.py  diff.py  ds.py  env.py  evaluate.py  exceptions.py  func_utils.py  get.py  import_utils.py  index.py  instantiate.py  iter_utils.py  ls.py  main.py  op_type.py  params.py  path.py  pipe.py  progress.py  pull.py  query.py  query_cmd.py  repo.py  sort.py  stage.py  status.py  storage.py  string_utils.py  (+6 more)
ldb/command/: add.py  add_storage.py  commit.py  completion.py  delete.py  diff.py  ds.py  evaluate.py  get.py  index.py  init.py  instantiate.py  ls.py  pull.py  query.py  stage.py  status.py  sync.py  tag.py  transform.py  unindex.py
ldb/db/: __init__.py  abstract.py  annotation.py  collection.py  data_object.py  dataset.py  dataset_version.py  duckdb.py  file.py  obj.py
ldb/db/duckdb/: annotation.py  connection.py
ldb/db/sql/: base.py  models.py
ldb/db/sqlite/: annotation.py  collection.py  data_object.py
ldb/fs/: __init__.py  path.py  utils.py
ldb/index/: __init__.py  annotation_only.py  base.py  indexer.py  inferred.py  label_studio.py  utils.py
ldb/jmespath/: __init__.py  exceptions.py  parser.py
ldb/objects/: annotation.py  collection.py  data_object.py  dataset.py  dataset_version.py  transform_mapping.py
ldb/plugins/: clip_image.py  clip_text.py  clip_utils.py  registry.py  resnet_image.py  resnet_utils.py  utils.py
ldb/query/: functions.py  search.py  user_functions.py  utils.py
requirements/: tests.txt
scripts/: gen-numbers  textocr_roman_numerals.py
sort_option/: reverse  reverse.bat  reverse.py
stubs/funcy/: objects.pyi
stubs/jmespath/: __init__.pyi  functions.pyi  parser.pyi
tests/: add.py  base.py  conftest.py  data.py  pyannotate_conftest.py  test_add.py  test_add_storage.py  test_commit.py  test_del.py  test_diff.py  test_evaluate.py  test_get.py  test_index.py  test_init.py  test_instantiate.py  test_ls.py  test_physical.py  test_pull.py  test_query.py  test_stage.py  test_status.py  test_sync.py  test_tag.py  test_transform.py  test_version.py  utils.py
tests/benchmarks/: conftest.py  test_ls.py
tests/data/fashion-mnist/annotations_only/: 01012.json  01014.json  01036.json
tests/data/fashion-mnist/has_both/test/: 00005.json
tests/data/fashion-mnist/has_both/train/: 00015.json  00029.json
tests/data/fashion-mnist/original/annotations_only/: 01017.json
tests/data/fashion-mnist/original/has_both/train/: 00026.json  00033.json  00038.json
tests/data/fashion-mnist/updates/diff_inference/: 00002.json  00015.json  00033.json
tests/data/fashion-mnist/updates/same_inference/: 00007.json  00029.json  00040.json
