[metadata]
name = ldb-alpha
version = attr: ldb.version.__version__
description = A command line tool for data-centric science and machine learning projects
url = https://github.com/iterative/ldb
author = Jon Burdo
author_email = jon@jonburdo.com
maintainer = Iterative
maintainer_email = support@iterative.ai
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha

[options]
packages = find:
install_requires =
    appdirs>=1.4.3
    fsspec>=2021.10.1
    jmespath>=0.10.0
    shtab>=1.3.4,<2
    tomlkit>=0.7.0,<1.0.0
    typing-extensions>=4.0.0
python_requires = >=3.7
include_package_data = True

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    pyannotate==1.2.0
lint =
    mypy==0.910
    pre-commit==2.9.2
    pyannotate==1.2.0
    pylint==2.11.1
    pylint-pytest==1.1.2
    pytest==6.2.5
    types-all==1.0.0
    types-appdirs==1.4.1
    types-jmespath==0.10.0
    types-setuptools==57.4.2
test =
    pytest==6.2.5
test-setup =
    dvc[s3]>=2.8.2

[options.package_data]
* = *.txt, *.rst, *.md
ldb = VERSION

[options.entry_points]
console_scripts =
    ldb = ldb.main:main

[flake8]
ignore=D100,D101,D102,D103,D104,D105,D200,W503
max_line_length = 79
exclude = .git,__pycache__,build,dist
per-file-ignores =
    setup.py:D100
    tests/*:D100,D103
