[metadata]
name = ldb-alpha
version = attr: ldb.version.__version__
description = A command line tool for data-centric science and machine learning projects
long_description =
long_description_content_type = text/markdown
url = https://github.com/iterative/ldb
author = Jon Burdo
author_email = jon@jonburdo.com
maintainer = Iterative
maintainer_email = support@iterative.ai
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha

[options]
packages = find:
install_requires =
    appdirs>=1.4.3
    dvc-objects==0.1.16
    fsspec>=2021.10.1
    funcy>=1.17
    jmespath>=0.10.0
    rich>=12.0.1
    shtab>=1.3.4,<2
    tomlkit>=0.9.1,<1.0.0
    typing-extensions>=4.0.0
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    %(lint)s
    autoflake>=1.4
    pyannotate>=1.2.0
lint =
    %(test)s
    mypy>=0.910
    pre-commit>=2.9.2
    pyannotate>=1.2.0
    pylint>=2.14.5,<2.15.0
    pylint-pytest>=1.1.2
    types-all>=1.0.0
    types-appdirs>=1.4.1
    types-jmespath>=0.10.0
    types-setuptools>=57.4.2
# testing
test =
    %(clip-plugin)s
    %(resnet-plugin)s
    %(s3)s
    pytest>=6.2.5
    pytest-xdist>=2.5.0
test-setup =
    dvc[s3]>=2.8.2
# remote storage
s3 = s3fs>=2021.11.1
# plugins
clip-plugin =
    clip-anytorch>=2.3.0
resnet-plugin =
    torch>=1.10.1
    torchvision>=0.11.2

[options.package_data]
* = *.txt, *.rst, *.md
ldb = VERSION

[options.entry_points]
console_scripts =
    ldb = ldb.main:main
    clip-text = ldb.plugins.registry:clip_text
    clip-image = ldb.plugins.registry:clip_image
    resnet-image = ldb.plugins.registry:resnet_image

[flake8]
ignore=
    D100,D101,D102,D103,D104,D105,D107,D200,W503
    E203  # whitespace before ':'

    # flake8-bandit
    S101  # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    S311  # Standard pseudo-random generators are not suitable for security/cryptographic purposes.
    S404  # Consider possible security implications associated with the subprocess module.
    S604  # Function call with shell=True parameter identified, possible security issue. (S602 will still handle subprocess call with shell=True)

    # flake8-string-format
    P102  # docstring does contain unindexed parameters

max_line_length = 79
exclude = .git,__pycache__,build,dist
per-file-ignores =
    setup.py:D100
    tests/*:D100,D103,S101
